<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="25dp"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgWelcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:autofillHints="welcome"
                android:contentDescription="@string/welcome"
                app:srcCompat="@drawable/welcome_to" />

            <ImageView
                android:id="@+id/imgBauss"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/bauss"
                app:srcCompat="@drawable/bauuss" />

            <ImageView
                android:id="@+id/imgCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/city"
                app:srcCompat="@drawable/cityscapes_downtown" />

            <TextView
                android:id="@+id/twLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_marginTop="5dp"
                android:layout_marginStart="24dp"
                android:textSize="28sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/logTwEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twe_mail"
                android:layout_marginTop="5dp"
                android:layout_marginStart="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/twpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="5dp"
                android:layout_marginStart="24dp"
                />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
         </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                app:cornerRadius="16dp"
                android:text="@string/btn_log_in"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                app:cornerRadius="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"/>

            <TextView
                android:id="@+id/twForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:gravity="center" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>