<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ScrollView
        android:id="@+id/suSwSignup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/llSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/suBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/group"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:contentDescription="@string/su_back_btn" />

            <TextView
                android:id="@+id/twSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_sign_up_tw"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                android:textColor="@color/city_login"/>

            <TextView
                android:id="@+id/suUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_username"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/suEtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/suEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_tw_email_adress"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/suEtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="suEtEmailAdress"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck"
                />

            <TextView
                android:id="@+id/suTwPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_et_password"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/suEtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
                android:autofillHints="" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/suBtnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/su_register"
                app:cornerRadius="16dp"
                android:layout_marginTop="50dp"/>

            <ImageView
                android:id="@+id/suIwCityTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/su_city"
                app:srcCompat="@drawable/cityscapes_town" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>